# safe-velocity-region-for-car

./: .clang-format  README.md  max_speed_next_step.py  pyproject.toml  run.sh  safe_region.py  safe_regon.py  start.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: safe_region.py  safe_region_compare.py
src/cpp/: compile_cpp.sh  makefile  safe_region_cpp.py
src/cpp/include/: safecar.hpp
src/cpp/src/: pybind.cpp  safecar.cpp
src/py/: safe_region.py
