[project]
name = "safe-region-for-next-step-velocity"
version = "0.1.0"
description = ""
authors = [
    {name = "jinooLi",email = "jinu1423@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pybind11 (>=2.13.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
